tests/golden/errors/trailing_whitespace.stderr
error[formatting]: trailing whitespace is not part of the canonical grammar
  --> trailing_whitespace.kso:1:11
   1 | print "hi" 
                 ^
